added heading tags to tutorial names. finished tutorial 13

--- a/NextJS_Codevolution_Tutorial_Notes.ipynb
+++ b/NextJS_Codevolution_Tutorial_Notes.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 1: Introduction"
+    "### Tutorial 1: Introduction"
    ]
   },
   {
@@ -35,420 +35,432 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 2: Hello World"
+    "### Tutorial 2: Hello World"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tutorial 3: Project Structure"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 3: Project Structure"
+    "### Tutorial 4: Before We Start"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 4: Before We Start"
+    "### Tutorial 5: Routing"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 5: Routing"
+    "### Tutorial 6: Nested Routes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 6: Nested Routes"
+    "### Tutorial 7: Dynamic Routes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 7: Dynamic Routes"
+    "### Tutorial 8: Nested Dynamic Routes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 8: Nested Dynamic Routes"
+    "### Tutorial 9: Catch All Segements"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 9: Catch All Segements"
+    "### Tutorial 10: Not Found Page"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 10: Not Found Page"
+    "### Tutorial 11: File Colocation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 11: File Colocation"
+    "### Tutorial 12: Private Folders"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 12: Private Folders"
+    "### Tutorial 13: Route Groups"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 13: Route Groups"
+    "add {} in the name of the folder you want omitted from the URL. As in, this folder exists for clarity and organisation purposes only, but don't show this folder in the .../folder/page pattern on the URL, only show .../page"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 14: Layouts"
+    "### Tutorial 14: Layouts"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 15: Nested Layouts"
+    "### Tutorial 15: Nested Layouts"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 16: Route Group Layout"
+    "### Tutorial 16: Route Group Layout"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 17: Routing Metadata"
+    "### Tutorial 17: Routing Metadata"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 18: Title Metadata"
+    "### Tutorial 18: Title Metadata"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 19: Link Component Navigation"
+    "### Tutorial 19: Link Component Navigation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 20: Active Links"
+    "### Tutorial 20: Active Links"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 21: Navigating Programmatically"
+    "### Tutorial 21: Navigating Programmatically"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 22: Templates"
+    "### Tutorial 22: Templates"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 23: Loading UI"
+    "### Tutorial 23: Loading UI"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 24: Error Handling"
+    "### Tutorial 24: Error Handling"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 25: Recovering From Errors"
+    "### Tutorial 25: Recovering From Errors"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 26: Handling Errors in Nested Routes"
+    "### Tutorial 26: Handling Errors in Nested Routes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 27: Handling Errors in Layouts"
+    "### Tutorial 27: Handling Errors in Layouts"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 28: Parallel Routes"
+    "### Tutorial 28: Parallel Routes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 29: Unmatched Routes"
+    "### Tutorial 29: Unmatched Routes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 30: Conditional Routes"
+    "### Tutorial 30: Conditional Routes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 31: Intercepting Routes"
+    "### Tutorial 31: Intercepting Routes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 32: Parallel Intercepting Routes"
+    "### Tutorial 32: Parallel Intercepting Routes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 33: Routes Handlers"
+    "### Tutorial 33: Routes Handlers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 34: Handling GET Request"
+    "### Tutorial 34: Handling GET Request"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 35: Handling POST Request"
+    "### Tutorial 35: Handling POST Request"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 36: Dynamic Route Handlers"
+    "### Tutorial 36: Dynamic Route Handlers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 37: Handling PATCH Request"
+    "### Tutorial 37: Handling PATCH Request"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 38: Handling DELETE Request"
+    "### Tutorial 38: Handling DELETE Request"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 39: URL Query Parameters"
+    "### Tutorial 39: URL Query Parameters"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 40: Redirects in Route Handlers"
+    "### Tutorial 40: Redirects in Route Handlers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 41: Headers in Route Handlers"
+    "### Tutorial 41: Headers in Route Handlers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 42: Cookies in Route Handlers"
+    "### Tutorial 42: Cookies in Route Handlers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 43: Caching in Route Handlers"
+    "### Tutorial 43: Caching in Route Handlers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 44: Middleware"
+    "### Tutorial 44: Middleware"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 45: Rendering"
+    "### Tutorial 45: Rendering"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 46: Client-side Rendering (CSR)"
+    "### Tutorial 46: Client-side Rendering (CSR)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 47: Server-side Rendering (SSR)"
+    "### Tutorial 47: Server-side Rendering (SSR)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 48: Suspense for SSR"
+    "### Tutorial 48: Suspense for SSR"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 49: React Server Components (RSC)"
+    "### Tutorial 49: React Server Components (RSC)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 50: Server and Client Components"
+    "### Tutorial 50: Server and Client Components"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 51: RSC Rendering Layouts"
+    "### Tutorial 51: RSC Rendering Layouts"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 52: Static Rendering"
+    "### Tutorial 52: Static Rendering"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 53: Dynamic Rendering"
+    "### Tutorial 53: Dynamic Rendering"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 54: Streaming"
+    "### Tutorial 54: Streaming"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 55: Server and Client Composition Patterns"
+    "### Tutorial 55: Server and Client Composition Patterns"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 56: Server-only Code"
+    "### Tutorial 56: Server-only Code"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 57: Third Party Packages"
+    "### Tutorial 57: Third Party Packages"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 58: Context Providers"
+    "### Tutorial 58: Context Providers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 59: Client-only Code"
+    "### Tutorial 59: Client-only Code"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 60: Client Component Placement"
+    "### Tutorial 60: Client Component Placement"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tutorial 61: Interweaving Server and Client Components"
+    "### Tutorial 61: Interweaving Server and Client Components"
    ]
   },
   {
